--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -4,6 +4,7 @@ security:
 
     encoders:
             FOS\UserBundle\Model\UserInterface: sha512
+            AppBundle\Entity\Customer: bcrypt
 
     role_hierarchy:
             ROLE_ADMIN:       [ROLE_USER, ROLE_SONATA_ADMIN]
