--- a/src/AdminBundle/Resources/config/services.yml
+++ b/src/AdminBundle/Resources/config/services.yml
@@ -44,6 +44,20 @@ services:
           - { name: sonata.admin, manager_type: orm, label: Objednávky položka, show_in_dashboard: "false" }
         public: true
 
+    admin.shop.attribute:
+        class: AdminBundle\Admin\AttributeAdmin
+        arguments: [~, AppBundle\Entity\Attribute, ~]
+        tags:
+          - { name: sonata.admin, manager_type: orm, label: Atribut, show_in_dashboard: "false" }
+        public: true
+
+    admin.shop.attribute_option:
+        class: AdminBundle\Admin\AttributeOptionAdmin
+        arguments: [~, AppBundle\Entity\AttributeOption, ~]
+        tags:
+          - { name: sonata.admin, manager_type: orm, label: Atribut option, show_in_dashboard: "false" }
+        public: true
+
     extension.listener:
         class: AdminBundle\EventListener\DoctrineExtensionListener
         calls:
