--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -105,6 +105,10 @@ sonata_admin:
             Eshop:
                 icon:  '<i class="fa fa-money"></i>'
 
+#sonata_intl:
+#    timezone:
+#        default: Europe/Prague
+
 sonata_user:
     security_acl:           false
     impersonating_route:    homepage # or any route you want to use
@@ -183,6 +187,34 @@ stof_doctrine_extensions:
             sluggable: true
             translatable: true
             timestampable: true
+
+knp_snappy:
+    pdf:
+        enabled:    true
+        binary:     wkhtmltopdf
+        options:    []
+    image:
+        enabled:    true
+        binary:     wkhtmltoimage
+        options:    []
+
+liip_imagine :
+    resolvers :
+        default :
+            web_path : ~
+
+    filter_sets :
+        cache : ~
+
+        # the name of the "filter set"
+        product_detail_large:
+            # adjust the image quality to 75%
+            quality : 85
+            # list of transformations to apply (the "filters")
+            filters :
+                # create a thumbnail: set size to 120x90 and use the "outbound" mode
+                # to crop the image when the size ratio of the input differs
+                thumbnail  : { size : [1200, 1200],  mode : inset }
 
 #knp_doctrine_behaviors:
 #    translatable: true
