--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -26,3 +26,6 @@ sonata_user_admin_resetting:
 
 fos_js_routing:
     resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml"
+
+_liip_imagine:
+    resource: "@LiipImagineBundle/Resources/config/routing.xml"
