--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
         "knplabs/knp-menu-bundle": "^2.1",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^3.0.2",
-        "sonata-project/admin-bundle": "^3.24",
+        "sonata-project/admin-bundle": "3.x-dev",
         "sonata-project/block-bundle": "^3.5",
         "sonata-project/core-bundle": "^3.6",
         "sonata-project/doctrine-orm-admin-bundle": "^3.1",
@@ -47,7 +47,10 @@
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.3.10",
         "symfony/symfony": "3.*",
-        "twig/twig": "^1.0||^2.0"
+        "twig/twig": "^1.0||^2.0",
+        "mashape/unirest-php": "^3.0",
+        "knplabs/knp-snappy-bundle": "^1.5.2",
+        "liip/imagine-bundle": "^1.9"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
