kontaktni formular, platba gopay

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -49,11 +49,17 @@ security:
             #    login_path: login
             #    check_path: login
                 # csrf_token_generator: security.csrf.token_manager
+            #json_login:
+            #     provider:      customer_db_provider
+            #     check_path:    /loginAjax
+
             simple_form:
                  provider:      customer_db_provider
                  authenticator: customer_authenticator
                  check_path:    login
                  login_path:    login
+                 success_handler: app.security.login_handler
+                 failure_handler: app.security.login_handler
 
             logout:
                 path:   /logout
@@ -62,9 +68,7 @@ security:
                 # https://codereviewvideos.com/course/symfony-3-for-beginners/video/adding-logout
 
             anonymous:    true
-            json_login:
-                provider:   customer_db_provider
-                check_path: /loginAjax
+
             # activate different ways to authenticate
 
             # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
