--- a/composer.json
+++ b/composer.json
@@ -28,11 +28,15 @@
         "egeloen/ckeditor-bundle": "^5.0",
         "friendsofsymfony/jsrouting-bundle": "^2.2",
         "friendsofsymfony/user-bundle": "^2.0",
+        "gopay/payments-sdk-php": "^1.3",
         "incenteev/composer-parameter-handler": "^2.0",
         "intervention/image": "^2.4",
         "knplabs/doctrine-behaviors": "~1.1",
         "knplabs/knp-markdown-bundle": "^1.5",
         "knplabs/knp-menu-bundle": "^2.1",
+        "knplabs/knp-snappy-bundle": "^1.5.2",
+        "liip/imagine-bundle": "^1.9",
+        "mashape/unirest-php": "^3.0",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^3.0.2",
         "sonata-project/admin-bundle": "3.x-dev",
@@ -47,10 +51,7 @@
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.3.10",
         "symfony/symfony": "3.*",
-        "twig/twig": "^1.0||^2.0",
-        "mashape/unirest-php": "^3.0",
-        "knplabs/knp-snappy-bundle": "^1.5.2",
-        "liip/imagine-bundle": "^1.9"
+        "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
