--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -221,7 +221,7 @@ liip_imagine :
         # the name of the "filter set"
         categories_list:
             # adjust the image quality to 75%
-            quality : 85
+            quality : 100
             # list of transformations to apply (the "filters")
             filters :
                 # create a thumbnail: set size to 120x90 and use the "outbound" mode
@@ -236,6 +236,32 @@ liip_imagine :
                 # create a thumbnail: set size to 120x90 and use the "outbound" mode
                 # to crop the image when the size ratio of the input differs
                 thumbnail  : { size : [800 , 600],  mode : outbound }
+
+        product_list:
+            quality : 100
+            filters :
+                thumbnail  : { size : [400, 400],  mode : outbound }
+
+        product_detail_main:
+            quality : 100
+            filters :
+                thumbnail  : { size : [510, 510],  mode : outbound }
+
+        product_detail_thumb:
+            quality : 100
+            filters :
+                thumbnail  : { size : [150, 150],  mode : outbound }
+
+        cart_thumb:
+            quality : 100
+            filters :
+                thumbnail  : { size : [100, 100],  mode : outbound }
+
+        product_detail_large:
+            quality : 100
+            filters :
+                thumbnail  : { size : [1000, 1000],  mode : outbound }
+
 
 #knp_doctrine_behaviors:
 #    translatable: true
