google analytics + cookie hlaseni + ignore cache pro fotky

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@
 !web/data/shop/cache/.gitkeep
 /web/data/shop/product/*
 !web/data/shop/product/.gitkeep
+/web/media/cache/*
+!/web/media/cache/.gitkeep
